# QMamehook

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qhookermain.cpp  qhookermain.h
.github/workflows/: cmake-multi-platform.yml
